# krag

./: .dockerignore  .env  .env.example  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.json  FORMATTING.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  turbo.json
apps/ingestion-worker/: .dockerignore  Dockerfile  child_chunks.json  db_chunks.json  embeddings.json  extracted_text.txt  main.py  modal_service.py  package.json  parent_chunks.json  pyproject.toml
apps/ingestion-worker/lib/: chunker.py  modal_clients.py  pdf_parser.py  redis_client.py  save_to_db.py  website_parser.py
apps/ingestion-worker/schemas/: index.py
apps/ingestion-worker/utils/: chunk_splitter.py  create_db_chunks.py  db_client.py  encrypt.py  parent_child_chunks.py  split_pdf_pages.py  split_text_tables.py  tools.py
apps/retrieval-worker/: .dockerignore  Dockerfile  main.py  package.json  pyproject.toml
apps/retrieval-worker/lib/: llm_client.py  process_request.py  redis_client.py
apps/retrieval-worker/schemas/: __init__.py  chunk_filter.py  chunks.py  citations.py  context.py  filtered_chunks.py  messages.py  query_optimizer.py
apps/retrieval-worker/src/: main.py
apps/retrieval-worker/types/: __init__.py  chunk_filter.py  chunk_retriever.py  chunks.py  citations.py  message_request.py  messages.py  query_optimizer.py
apps/retrieval-worker/utils/: chunk_retriever.py  dummy.json  encryption.py  extract_citations.py  filter_chunks_using_llm.py  filter_parent_chunks.py  final_extraction.py  finalise_response.py  get_parent_chunks.py  prepare_answer.py  prepare_context.py  prepare_question.py  save_to_db.py  summarise_messages.py  tokenizer_config.py  tools.py
apps/web/: .dockerignore  Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css
apps/web/app/(protected)/: layout.tsx
apps/web/app/(public)/: layout.tsx  page.tsx
apps/web/app/lib/: auth-client.ts  auth-user.ts  auth.ts
apps/web/lib/: auth-client.ts  auth-provider.tsx  auth-user.ts  auth.ts  decrypt.ts  encrypt.ts  encryption.ts  redis.ts  supabase.ts  upload-file.ts
supabase-kong-config/: kong.yml
(+51 files in other folders)
