[project]
name = "krag-root"
version = "0.0.0"
description = "Root workspace for Hybrid Monorepo"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "modal>=1.3.1",
    "redis>=7.1.0",
]

# This is the critical part that fixes your error
[tool.uv.workspace]
members = [
    "apps/*",
    "packages/modal_services",
]
exclude = [
    "apps/web"
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | \.next
  | \.turbo
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "workers"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
]
