[project]
name = "ingestion-worker"
version = "0.1.0"
description = "Ingestion worker for Krag"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=2.2.0",
    "langchain-text-splitters>=1.1.0",
    "markdown-it-py>=4.0.0",
    "prisma>=0.15.0",
    "pypdf>=6.6.2",
    "supabase>=2.27.2",
    "modal-services>=0.1.0",
]

[tool.uv.sources]
modal-services = { workspace = true }
