[project]
name = "retrieval-worker"
version = "0.1.0"
description = "Retrieval worker for Krag"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "modal_services>=0.1.0",
    "prisma>=0.15.0",
    "uvicorn>=0.40.0",
    "google-genai>=1.62.0",
    "langchain-google-genai>=4.2.0",
]

[tool.uv.sources]
modal_services = { workspace = true }
